--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,11 @@
   src: url("") format("woff2"), url("") format("woff");
 }
 
-/* ******************************** */
-
-/* Colores */
-
-/* ******************************** */
+:root {
+  /* colors */
+  --color-azul-claro: #4c4e78;
+  --color-azul-oscuro: #1b0559;
+  --color-blanco-letra: #f5f5f5;
+  --color-lila-casillas: #b42bb6;
+  --color-negro-letra: #0f0f0f;
+}
