--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,14 @@
 /* Tipografía */
 @font-face {
   font-family: "Major shift";
-  src: url("../font/major_shift-webfont.woff2") format("woff2"), url("../font/major_shift-webfont.woff") format("woff");
+  src: url("../font/major_shift-webfont.woff2") format("woff2"),
+    url("../font/major_shift-webfont.woff") format("woff");
 }
 
 @font-face {
   font-family: "Lora";
-  src: url("../font/lora-regular-webfont.woff2") format("woff2"), url("../font/lora-regular-webfont.woff") format("woff");
+  src: url("../font/lora-regular-webfont.woff2") format("woff2"),
+    url("../font/lora-regular-webfont.woff") format("woff");
 }
 
 :root {
@@ -24,7 +26,7 @@
   --color-blanco-letra: #f5f5f5;
   --color-lila-casillas: #b42bb6;
   --color-negro-letra: #0f0f0f;
-  --color-fondo-header: #1D1E2E;
+  --color-fondo-header: #1d1e2e;
 
   /* Tipografía */
   --h5: 0.7rem;
@@ -35,20 +37,33 @@
   --h1: 2.5rem;
 }
 
-body{
+/* Animacion de vista */
+@keyframes show {
+  from {
+    opacity: 0;
+    scale: 50%;
+  }
+  to {
+    opacity: 1;
+    scale: 100%;
+  }
+}
+
+body {
   font-family: "Lora";
 
-  & header{
+  & header {
     background: var(--color-fondo-header);
     width: 100%;
-    padding: 5px 0;
+    height: 60px;
 
     display: flex;
     justify-content: center;
+    align-items: center;
 
-    & .container__header{
+    & .container__header {
       width: 100%;
-      max-width: 1780px;
+      max-width: calc(100% - 140px);
       color: var(--color-blanco-letra);
       font-family: "Major shift";
 
@@ -56,13 +71,13 @@ body{
       align-items: center;
       justify-content: space-between;
 
-      & nav{
+      & nav {
         font-family: "Lora";
 
         display: flex;
         gap: 80px;
 
-        & a{
+        & a {
           text-decoration: none;
           color: var(--color-blanco-letra);
         }
@@ -70,32 +85,222 @@ body{
     }
   }
 
-  
+  & main {
+    width: 100%;
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
+    & .generador {
+      background: linear-gradient(
+        180deg,
+        rgba(27, 5, 89, 1) 0%,
+        rgba(27, 5, 89, 1) 14%,
+        rgba(76, 78, 120, 1) 100%
+      );
+      width: 100%;
+      height: calc(100vh - 60px);
 
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
+      & .izquierda {
+        color: var(--color-blanco-letra);
 
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
+        gap: 60px;
 
+        & .opciones {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: flex-start;
+          gap: 15px;
 
+          & .opcion {
+            display: flex;
+            align-items: center;
 
-  & footer{
-    background: linear-gradient(180deg, var(--color-azul-oscuro) 0%, var(--color-azul-claro) 100%);
+            & input[type="checkbox"] {
+              width: 20px;
+              height: 20px;
+              margin-right: 15px;
+            }
+          }
+        }
+
+        & .zona__salida {
+          display: flex;
+          gap: 30px;
+
+          & .salida__contrasena {
+            background: rgb(209, 209, 255);
+            width: 500px;
+            height: 40px;
+            border: 6px solid var(--color-lila-casillas);
+            border-radius: 10px;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          }
+
+          & .boton__generar {
+            width: 100px;
+            height: 40px;
+            border: 6px solid var(--color-lila-casillas);
+            border-radius: 10px;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          }
+        }
+      }
+    }
+
+    & picture {
+      width: 400px;
+
+      @media only screen and (min-width: 1000px) {
+        height: 350px;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-image: url(../img/desktop/imagen_robot1.webp);
+        @media (-webkit-max-device-pixel-ratio: 2) {
+          background-image: url(../assets/imagen_robot1@2x.png);
+        }
+      }
+    }
+
+    & .forma__redondeada {
+      width: 100%;
+      height: 150px;
+      background: var(--color-azul-claro);
+      border-radius: 50% 50% 50% 50% / 0% 0% 100% 100%;
+    }
+
+    & .contenido {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      padding: 80px 200px;
+      justify-items: center;
+
+      & .parrafo1,
+      .imagen1,
+      .imagen2,
+      .parrafo2,
+      .parrafo3,
+      .imagen3 {
+        view-timeline: --text;
+        view-timeline-axis: block;
+        animation-timeline: --text;
+        animation-name: show;
+        animation-range: entry 25% cover 28%;
+        animation-fill-mode: both;
+      }
+
+      & h3 {
+        margin-bottom: 20px;
+      }
+
+      & .imagen1 {
+        width: 250px;
+        height: 210px;
+        @media only screen and (min-width: 1000px) {
+          background-size: cover;
+          background-position: center;
+          background-repeat: no-repeat;
+          background-image: url(../img/desktop/imagen_robot2.webp);
+          @media (-webkit-max-device-pixel-ratio: 2) {
+            background-image: url(../assets/imagen_robot2@2x.png);
+          }
+        }
+      }
+
+      & .imagen2 {
+        width: 200px;
+        height: 200px;
+        margin: auto 0;
+        @media only screen and (min-width: 1000px) {
+          background-size: cover;
+          background-position: center;
+          background-repeat: no-repeat;
+          background-image: url(../img/desktop/imagen_contrasena.webp);
+          @media (-webkit-max-device-pixel-ratio: 2) {
+            background-image: url(../assets/imagen_contrasena@2x.png);
+          }
+        }
+      }
+
+      & .parrafo2 {
+        margin: auto;
+      }
+
+      & .parrafo3 {
+        padding-top: 50px;
+      }
+
+      & .imagen3 {
+        width: 200px;
+        height: 200px;
+        margin: auto 0;
+        @media only screen and (min-width: 1000px) {
+          background-size: cover;
+          background-position: center;
+          background-repeat: no-repeat;
+          background-image: url(../img/desktop/imagen_info_personal.webp);
+          @media (-webkit-max-device-pixel-ratio: 2) {
+            background-image: url(../assets/imagen_info_personal@2x.png);
+          }
+        }
+      }
+    }
+
+    /* -----------------REGISTRO--------------- */
+
+  }
+
+  & footer {
+    background: linear-gradient(
+      180deg,
+      var(--color-azul-oscuro) 0%,
+      var(--color-azul-claro) 100%
+    );
     color: var(--color-blanco-letra);
-    padding-top: 50px;
+    padding: 50px 0;
 
     display: flex;
     justify-content: center;
     gap: 100px;
 
-    & section{
+    & section {
       display: flex;
       flex-direction: column;
       gap: 20px;
 
-      & ul li{
+      & ul li {
         font-size: var(--h5);
-        margin-bottom: .375rem;
+        margin-bottom: 0.375rem;
+      }
+
+      & .iconos__redes {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 0.625rem;
+
+        & img {
+          width: 1.25rem;
+        }
       }
     }
   }
