--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body {
     background: var(--color-fondo-header);
     width: 100%;
     height: 60px;
+    z-index: 1;
 
     display: flex;
     justify-content: center;
@@ -495,6 +496,22 @@ body {
         }
       }
     }
+
+    & a {
+      background: var(--color-azul-oscuro);
+      width: 100px;
+      height: 40px;
+      border: 2px solid var(--color-lila-casillas);
+      border-radius: 10px;
+      cursor: pointer;
+      margin-top: 20px;
+      text-decoration: none;
+      color: var(--color-blanco-letra);
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 
   /* --------------FOOTER-------------- */
@@ -519,6 +536,11 @@ body {
       & ul li {
         font-size: var(--h5);
         margin-bottom: 0.375rem;
+
+        & a {
+          text-decoration: none;
+          color: var(--color-blanco-letra);
+        }
       }
 
       & .iconos__redes {
