--- a/css/style.css
+++ b/css/style.css
@@ -514,8 +514,16 @@ body {
           justify-content: space-between;
           gap: 15px;
 
+          & .imagenes__svg {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+           
+          }
+
           & img {
             width: 16px;
+            margin-left: 5px;
             cursor: pointer;
           }
         }
